<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_40"
        android:layout_marginLeft="@dimen/margin_100"
        android:layout_marginRight="@dimen/margin_100"
        android:layout_marginTop="@dimen/margin_50"
        android:src="@drawable/logo_calf" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_marginRight="@dimen/margin_60"
        android:background="@drawable/edt_login_input_bg" >

        <TextView
            android:id="@+id/tv_username_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="用户名："
            android:textSize="@dimen/text_13"
            android:textColor="@color/write" />

        <EditText
            android:id="@+id/edt_username_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_toRightOf="@+id/tv_username_tip"
            android:textColor="@color/write"
            android:textSize="@dimen/text_13"
            android:background="@null"
            android:gravity="center_vertical" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edt_login_input_bg" >

        <TextView
            android:id="@+id/tv_pwd_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="密   码："
            android:textSize="@dimen/text_13"
            android:textColor="@color/write" />

        <EditText
            android:id="@+id/edt_pwd_input"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_toRightOf="@+id/tv_pwd_tip"
            android:textColor="@color/write"
            android:textSize="@dimen/text_13"
            android:inputType="textPassword"
            android:background="@null"
            android:gravity="center_vertical" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login_now"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_60"
        android:layout_marginRight="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/btn_login_bg"
        android:text="@string/login_now"
        android:textSize="@dimen/text_15"
        android:textColor="@color/write" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forget_pwd"
            android:textSize="@dimen/text_13"
            android:textColor="@color/txt_content_color" />
        
        <TextView
            android:id="@+id/tv_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_13"
            android:text="@string/register_now"
            android:textColor="@color/txt_content_color" />
    </LinearLayout>

</LinearLayout>